# snippet

./: .gitignore  README.md  lstring.lua  lstring_test.lua  ltable.lua  ltable_test.lua  url.lua  url_test.lua
PIL4/ch27/: example  example.c  makefile  simple_lua  simple_lua.c  util.c  util.h
PIL4/ch28/: conf.lua  makefile  window  window.c
PIL4/ch29/: makefile  mylib.c  test_mylib.lua
PIL4/ch31/: array.c  makefile  test.lua
PIL4/ch32/: dir.c  lxp.c  makefile  test.lua
ffi/: image.lua  image2.lua  makefile  myffi.lua  new.lua  point.lua  printf.lua  sleep.lua  struct.lua  zlib.lua
lab/: b.c  b.lua  bench_local.lua  bench_pair.lua  bench_string_concat.lua
nginx/DeepIn/: README
nginx/chapter4/: ngx_http_mytest_module.c
nginx/conf/: nginx.conf
nginx/libnginx/: base64.d  cg_pool_test.d  ngx_pool.d  research_ngx_array.d  research_ngx_cycle.d  research_ngx_hash.d  research_ngx_list.d  research_ngx_queue.d
nginx/lua/: access_check.lua  capture_multi.lua  capture_print_param.lua  capture_queue.lua  decode_info.lua  get_body_file.lua  get_random_string.lua  get_value.lua  hello.lua  init_worker.lua  log.lua  lru.lua  mydata.lua  new_http.lua  param.lua  print_param.lua  request_header.lua  response_header.lua  room.lua  sp_md5.lua  sub_capture.lua  sub_request_header.lua  subduction.lua  sum.lua  syslog.lua  tags  test.lua  test_hex.lua  test_mysql.lua  (+7 more)
snippet/: CMakeLists.txt
snippet/coroutine_test/: CMakeLists.txt  coroutine_test.c
snippet/test_sds/: CMakeLists.txt  demo_sds.c
stap/: ngx-show-req.stp  time-s.stp  variables-in-printf-statements.stp
(+41 files in other folders)
